unpackaged/main/default/objects/pse__Revenue_Forecast_Batch__c/pse__Revenue_Forecast_Batch__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastBatchHelp</customHelpPage>
    <description>Stores the status and details of revenue forecast batch Apex jobs.</description>
    <label>Revenue Forecast Batch</label>
    <nameField>
        <displayFormat>RFB-{00000000}</displayFormat>
        <label>Revenue Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>