unpackaged/main/default/objects/pse__Revenue_Forecast_Batch__c/fields/pse__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Id__c</fullName>
    <description>A unique identifier for the revenue forecast batch Apex job. This is a system controlled field.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique identifier for the revenue forecast batch Apex job. This is a system controlled field.</inlineHelpText>
    <label>Batch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>