unpackaged/main/default/objects/pse__Revenue_Forecast_Batch__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The current status of the batch job.</description>
    <inlineHelpText>The current status of the batch job.</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>